@@ -6,11 +6,10 @@ import com.example.eyeglass.filters.CsrfCookieFilter;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.context.annotation.Profile;
-import org.springframework.core.convert.ConversionService;
 import org.springframework.security.authentication.password.CompromisedPasswordChecker;
+import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
-import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.crypto.factory.PasswordEncoderFactories;
 import org.springframework.security.crypto.password.PasswordEncoder;
@@ -30,7 +29,7 @@ import java.util.List;
 public class SecurityConfig {
 
     @Bean
-    SecurityFilterChain defaltSecurityFilterChain(HttpSecurity http, ConversionService conversionService) throws Exception {
+    SecurityFilterChain defaltSecurityFilterChain(HttpSecurity http) throws Exception {
         CsrfTokenRequestAttributeHandler csrfTokenRequestAttributeHandler = new CsrfTokenRequestAttributeHandler();
 
         http.securityContext(sc -> sc.requireExplicitSave(false))
@@ -39,30 +38,30 @@ public class SecurityConfig {
                                          .maximumSessions(3)
                                          .maxSessionsPreventsLogin(true))
             .requiresChannel(rcc -> rcc.anyRequest().requiresInsecure())
-            .csrf(csrfConfig->csrfConfig
-                    .csrfTokenRequestHandler(csrfTokenRequestAttributeHandler)
-                    .csrfTokenRepository(CookieCsrfTokenRepository.withHttpOnlyFalse()))
-            .addFilterAfter(new CsrfCookieFilter(), BasicAuthenticationFilter.class)
             .cors(cors -> cors.configurationSource(request -> {
                 var config = new CorsConfiguration();
                 config.setAllowedOrigins(Collections.singletonList(("http://localhost:3000")));
                 config.setAllowedMethods(Collections.singletonList("*"));
-                config.setAllowedHeaders(List.of("*"));
+                config.setAllowedHeaders(Collections.singletonList("*"));
                 config.setAllowCredentials(true);
                 config.setMaxAge(3600L);
                 return config;
             }))
+            .csrf(csrfConfig->csrfConfig
+                    .csrfTokenRequestHandler(csrfTokenRequestAttributeHandler)
+                    .csrfTokenRepository(CookieCsrfTokenRepository.withHttpOnlyFalse())
+                    .ignoringRequestMatchers("/api/register")
+            )
+            .addFilterAfter(new CsrfCookieFilter(), BasicAuthenticationFilter.class)
             .authorizeHttpRequests(authorize -> authorize
                     .requestMatchers("/api/admin/**").hasRole("ADMIN")
-                    .requestMatchers("/api/user/**").hasRole("USER")
+                    .requestMatchers("/api/user/**").authenticated()
                     .requestMatchers("/test").authenticated()
                     .requestMatchers("/api/register", "/api/login").permitAll()
                     .requestMatchers("/contact", "/error", "/invalidSession").permitAll()
             );
 
-        http.formLogin(flc->flc.loginPage("/login").permitAll()
-                               .defaultSuccessUrl("/home", true)
-                               .failureUrl("/login?error=true"));
+        http.formLogin(Customizer.withDefaults());
         http.httpBasic(hbc -> hbc.authenticationEntryPoint(new CustomBasicAuthenticationEntryPoint()));
         http.exceptionHandling(ehc -> ehc.accessDeniedHandler(new CustomAccessDeniedHandler()));
 
